--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
             flex-direction: column;
             align-items: center;
             justify-content: center;
-            height: 100vh;
             margin: 0;
             background-image: url('img/bg.jpg'); /* Define a imagem de fundo */
             background-size: cover; /* Redimensiona a imagem para cobrir toda a tela */
@@ -28,7 +27,7 @@
         .icon-button-container {
             display: grid;
             grid-template-columns: repeat(2, 1fr); /* Duas colunas em dispositivos móveis */
-            grid-gap: 15px; /* Espaçamento entre os botões */
+    
         }
 
         .icon-button {
@@ -37,9 +36,8 @@
             align-items: center;
             justify-content: center;
             text-align: center;
-            width: 200px; /* Largura fixa para todos os botões */
-            height: 200px; /* Altura fixa para todos os botões */
-            margin: 15px;
+          
+            margin: 5px;
             padding: 10px;
             border: none;
             border-radius: 8px;
@@ -56,7 +54,7 @@
         }
 
         .icon-button span {
-            font-size: 1.5rem;
+            font-size: 18px;
             white-space: normal; /* Permite a quebra de linha */
         }
 
