Tela de utensilio de cozinha e eletrodomesticos

--- a/index.html
+++ b/index.html
@@ -76,11 +76,11 @@
 <body>
     <img src="img/nomes.png" alt="Nomes" class="nomes-image">
     <div class="icon-button-container">
-        <button class="icon-button">
+        <button class="icon-button" onclick="window.location.href = 'utensilios_de_cozinha.html';">
             <i class="fas fa-utensils"></i>
             <span>Utensílios de Cozinha</span>
-        </button>
-        <button class="icon-button">
+        </button>        
+        <button class="icon-button" onclick="window.location.href = 'utensilios_de_cozinha.html';">
             <i class="fas fa-plug"></i>
             <span>Eletrodomésticos</span>
         </button>
