criação das outras telas, funcionalidade do pix e implementação das tabelas

--- a/index.html
+++ b/index.html
@@ -80,15 +80,15 @@
             <i class="fas fa-utensils"></i>
             <span>Utensílios de Cozinha</span>
         </button>        
-        <button class="icon-button" onclick="window.location.href = 'utensilios_de_cozinha.html';">
+        <button class="icon-button" onclick="window.location.href = 'eletrodomesticos.html';">
             <i class="fas fa-plug"></i>
             <span>Eletrodomésticos</span>
         </button>
-        <button class="icon-button">
+        <button class="icon-button" onclick="window.location.href = 'moveis_e_eletrodomesticos_grandes.html';">
             <i class="fas fa-couch"></i>
             <span>Móveis e Eletrodomésticos Grandes</span>
         </button>
-        <button class="icon-button">
+        <button class="icon-button" onclick="window.location.href = 'pix.html';">
             <i class="fab fa-pix"></i>
             <span>PIX</span>
         </button>
