--- a/moveis_e_eletrodomesticos_grandes.html
+++ b/moveis_e_eletrodomesticos_grandes.html
@@ -109,7 +109,7 @@
 </head>
 <body>
     <div class="table-title">
-        <i class="fas fa-plug"  style="font-size: 2.5rem;"></i> <span style="font-size: 1.5rem;">Eletrodomésticos</span>
+        <i class="fas fa-couch" style="font-size: 2.5rem;"></i> <span style="font-size: 1.5rem;">Móveis e Eletrod. Grandes</span>
     </div>
 
     <table>
@@ -148,17 +148,16 @@
 
         // Conteúdo do arquivo CSV (substitua pelo conteúdo real do seu arquivo)
         const csvContent = `
-        ,Aspirador de pó,Preto
-        ,Forno elétrico,Preto
-        ,Climatizador de ar,
-        ,Filtro de água,
-        ,Geladeira,
-        ,Lavadora de roupa,
-        ,Micro-ondas,
-        ,Lavadora de louças,
-        ,Freezer,
-        ,Juicer,
-        ,Máquina de pão,`;
+        ,Aspirador de pó,-,
+        ,Sofá retrátil para sala,-,
+        ,Armário para cozinha,-,
+        ,Mesa de jantar,-,
+        ,Painel para sala,-,
+        ,Fogão,-,
+        ,Pia para cozinha,-,
+        ,TV,-,
+        ,Cama de casal,-,
+        ,Guarda-roupas,-,`;
 
         // Processa o conteúdo do CSV
         processCSV(csvContent);
