--- a/utensilios_de_cozinha.html
+++ b/utensilios_de_cozinha.html
@@ -7,8 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
         body {
-            color:#fff;
-            font-family: "Arial";
+            color: #fff;
             margin: 0;
             padding: 0;
             background-image: url('img/bg.jpg'); /* Caminho correto para a imagem de fundo */
@@ -32,31 +31,29 @@
             width: 80%;
             max-width: 800px;
             border-radius: 5px;
-            padding: 10px;
+            padding: 20px;
             margin: 20px;
-            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.432); /* Adiciona sombra à tabela */
+            box-shadow: 0px 20px 20px rgba(0, 0, 0, 0.3); /* Adiciona sombra à tabela */
         }
 
         .table-title i {
             margin-right: 10px; /* Espaçamento entre o ícone e o texto */
-            font-size: 2rem; /* Tamanho maior */
+            font-size: 2.5rem; /* Tamanho maior */
             color: #fff; /* Cor branca */
         }
 
         .table-title span {
-            font-size: 1.5rem; /* Tamanho maior */
+            font-size: 2rem; /* Tamanho maior */
             text-transform: uppercase; /* Converte texto para caixa alta */
             color: #fff; /* Cor branca */
-    
         }
-
 
         table {
             border-collapse: collapse;
             width: 80%;
             max-width: 800px;
             background-color: rgba(255, 255, 255, 0.7); /* Cor de fundo com transparência */
-            box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.3); /* Adiciona sombra à tabela */
+            box-shadow: 0px 20px 20px rgba(0, 0, 0, 0.3); /* Adiciona sombra à tabela */
             text-transform: uppercase; /* Converte texto para caixa alta */
             margin: 0 20px 20px 20px; /* Adiciona margens à tabela para destacá-la */
         }
@@ -94,11 +91,25 @@
             text-decoration: line-through; /* Riscar o texto da coluna "Item" */
             color: #000; /* Defina a cor do texto como preto para melhor visibilidade */
         }
+
+        .btn-voltar {
+            background-color: #233219;
+            color: #fff;
+            padding: 15px 20px;
+            border: none;
+            border-radius: 8px;
+            cursor: pointer;
+            font-size: 1.5rem;
+            text-transform: uppercase;
+            margin: 5px;
+            box-shadow: 2px 5px 2px rgba(0, 0, 0, 0.3); /* Adiciona sombra à tabela */
+            
+        }
     </style>
 </head>
 <body>
-    <div class="table-title" style="background-color: rgba(35, 50, 25, calc(0.7 * (100% - 40px) / 800px));">
-        <i class="fas fa-utensils"></i> <h1>Utensílios de Cozinha</h1>
+    <div class="table-title">
+        <i class="fas fa-utensils" style="font-size: 2.5rem;"></i> <span style="font-size: 2rem;">Utensílios de Cozinha</span>
     </div>
 
     <table>
@@ -109,6 +120,8 @@
         </tr>
         <!-- Dados da planilha serão inseridos aqui dinamicamente -->
     </table>
+
+    <button class="btn-voltar" onclick="window.location.href='index.html'">Voltar</button>
 
     <script>
         // Função para processar o arquivo CSV (mantenha-a da maneira que você preferir)
@@ -136,43 +149,44 @@
         // Conteúdo do arquivo CSV (substitua pelo conteúdo real do seu arquivo)
         const csvContent = `
         ,Faqueiro (jogo de talheres), Prata
-        ,Jogo de panelas,
-        ,Jogo de formas e assadeiras,
-        ,Chaleira,
-        ,Jogo de copos (dia a dia),
-        ,Jogo de taças,
-        ,Bule e leiteira,
-        ,Garrafa térmica,
-        ,Balança para cozinha,
-        ,Jogo de facas,
-        ,Passadeira a vapor,
+        ,Jogo de panelas,-
+        ,Jogo de formas e assadeiras,-
+        ,Chaleira,-
+        ,Jogo de copos (dia a dia),-
+        ,Jogo de taças,-
+        ,Bule e leiteira,-
+        ,Garrafa térmica,-
+        ,Balança para cozinha,-
+        ,Jogo de facas,-
+        ,Passadeira a vapor,-
         ,Liquidificador,Preto
         ,Batedeira,Preto
         ,Mixer de alimentos,Preto
         ,Panela elétrica (arroz),Preto
         ,Panela elétrica (feijão),Preto
-        Ok,Sanduicheira elétrica,Preto
-        ,Grill,
-        Ok,Air fryer,Preto
-        ,Conjunto de medidores,
-        ,Conjunto de potes para organização,
-        ,Torneira elétrica,
-        ,Coifa,
+        ,Sanduicheira elétrica,Preto
+        ,Grill,-
+        ,Air fryer,Preto
+        ,Conjunto de medidores,-
+        ,Conjunto de potes para organização,-
+        ,Torneira elétrica,-
+        ,Coifa,-
+        ,Torradeira/sanduicheira,-
         ,Microondas,Preto
-        ,Processador de alimentos,
-        ,Batedeira,
+        ,Processador de alimentos,-
+        ,Batedeira,-
         ,Espremedor de frutas,Preto
-        ,Aparelho de café e chá,
-        ,Cafeteira,
-        ,Jarra,
-        ,Petisqueira,
-        ,Portacondimentos/temperos,
-        ,Portaguardanapos,
-        ,Saladeira,
-        ,Apoio para copos,
-        ,Jogo de utensílios e espátulas,
-        ,Jogo de lugar americano,
-        ,Tábua de passar,`;
+        ,Aparelho de café e chá,-
+        ,Cafeteira,-
+        ,Jarra,-
+        ,Petisqueira,-
+        ,Portacondimentos / temperos,-
+        ,Portaguardanapos,-
+        ,Saladeira,-
+        ,Apoio para copos,-
+        ,Jogo de utensílios e espátulas,-
+        ,Jogo de lugar americano,-
+        ,Tábua de passar,-`;
 
         // Processa o conteúdo do CSV
         processCSV(csvContent);
