atualização de iitens

--- a/eletrodomesticos.html
+++ b/eletrodomesticos.html
@@ -152,7 +152,7 @@
         ,Forno elétrico,Preto
         ,Climatizador de ar,
         ,Filtro de água,
-        ,Geladeira,
+        Ok,Geladeira,
         ,Lavadora de roupa,
         ,Micro-ondas,
         ,Lavadora de louças,
