--- a/moveis_e_eletrodomesticos_grandes.html
+++ b/moveis_e_eletrodomesticos_grandes.html
@@ -148,12 +148,11 @@
 
         // Conteúdo do arquivo CSV (substitua pelo conteúdo real do seu arquivo)
         const csvContent = `
-        ,Aspirador de pó,-,
         ,Sofá retrátil para sala,-,
         ,Armário para cozinha,-,
         ,Mesa de jantar,-,
         ,Painel para sala,-,
-        ,Fogão,-,
+        Ok,Fogão,-,
         ,Pia para cozinha,-,
         ,TV,-,
         ,Cama de casal,-,
