--- a/utensilios_de_cozinha.html
+++ b/utensilios_de_cozinha.html
@@ -151,27 +151,27 @@
         ,Faqueiro (jogo de talheres), Prata
         ,Jogo de panelas,-
         ,Jogo de formas e assadeiras,-
-        ,Chaleira,-
+        Ok,Chaleira,-
         ,Jogo de copos (dia a dia),-
         ,Jogo de taças,-
         ,Bule e leiteira,-
-        ,Garrafa térmica,-
+        Ok,Garrafa térmica,-
         ,Balança para cozinha,-
         ,Jogo de facas,-
         ,Passadeira a vapor,-
-        ,Liquidificador,Preto
+        Ok,Liquidificador,Preto
         ,Batedeira,Preto
         ,Mixer de alimentos,Preto
         ,Panela elétrica (arroz),Preto
         ,Panela elétrica (feijão),Preto
-        ,Sanduicheira elétrica,Preto
+        Ok,Sanduicheira elétrica,Preto
         ,Grill,-
-        ,Air fryer,Preto
+        Ok,Air fryer,Preto
         ,Conjunto de medidores,-
         ,Conjunto de potes para organização,-
         ,Torneira elétrica,-
         ,Coifa,-
-        ,Torradeira/sanduicheira,-
+        Ok,Torradeira / sanduicheira,-
         ,Microondas,Preto
         ,Processador de alimentos,-
         ,Batedeira,-
