--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         </button>
         <button class="icon-button" onclick="window.location.href = 'moveis_e_eletrodomesticos_grandes.html';">
             <i class="fas fa-couch"></i>
-            <span>Móveis e Eletrodomésticos Grandes</span>
+            <span>Móveis</span>
         </button>
         <button class="icon-button" onclick="window.location.href = 'pix.html';">
             <i class="fab fa-pix"></i>
