--- a/eletrodomesticos.html
+++ b/eletrodomesticos.html
@@ -149,6 +149,7 @@
         const csvContent = `
         Ok, Fogão, -
         , Pia para cozinha, -
+        , Coifa , -
         Ok, TV, -
         , Aspirador de pó, -
         , Forno elétrico, -
