--- a/utensilios_de_cozinha.html
+++ b/utensilios_de_cozinha.html
@@ -152,14 +152,14 @@
         , Jogo de panelas, -
         , Jogo de formas e assadeiras, -
         Ok, Chaleira, -
-        , Jogo de copos (dia a dia), -
+        Ok, Jogo de copos (dia a dia), -
         , Jogo de taças, -
         , Bule e leiteira, -
         Ok, Garrafa térmica, -
         , Jogo de facas, -
         , Tábua frios ou carne, -
         , Aparelho de café e chá, -
-        , Jogo de sobremesa, -
+        Ok, Jogo de sobremesa, -
         , Conjunto para bolo (prato e espátula), -
         , Jarra, -
         , Petisqueira, -
