--- a/eletrodomesticos.html
+++ b/eletrodomesticos.html
@@ -149,14 +149,14 @@
         const csvContent = `
         Ok, Fogão, -
         , Pia para cozinha, -
-        , Coifa , -
+        Ok, Coifa , -
         Ok, TV, -
         , Aspirador de pó, -
         , Forno elétrico, -
         , Climatizador de ar, -
         , Filtro de água, -
         Ok, Geladeira, -
-        , Lavadora de roupa, -
+        Ok, Lavadora de roupa, -
         Ok, Micro-ondas, -
         , Lavadora de louças, -
         , Freezer, -
