--- a/utensilios_de_cozinha.html
+++ b/utensilios_de_cozinha.html
@@ -148,8 +148,8 @@
 
         // Conteúdo do arquivo CSV (substitua pelo conteúdo real do seu arquivo)
         const csvContent = `
-        , Faqueiro (jogo de talheres), -
-        , Jogo de panelas, -
+        Ok, Faqueiro (jogo de talheres), -
+        Ok, Jogo de panelas, -
         , Jogo de formas e assadeiras, -
         Ok, Chaleira, -
         Ok, Jogo de copos (dia a dia), -
