--- a/eletrodomesticos.html
+++ b/eletrodomesticos.html
@@ -152,7 +152,7 @@
         Ok, Coifa , -
         Ok, TV, -
         , Aspirador de pó, -
-        , Forno elétrico, -
+        Ok, Forno elétrico, -
         , Climatizador de ar, -
         , Filtro de água, -
         Ok, Geladeira, -
@@ -169,7 +169,7 @@
         , Processador de alimentos, -
         , Batedeira, -
         , Espremedor de frutas, -
-        , Cafeteira, -
+        Ok, Cafeteira, -
         , Mixer de alimentos, -`;
 
         // Processa o conteúdo do CSV
