--- a/moveis_e_eletrodomesticos_grandes.html
+++ b/moveis_e_eletrodomesticos_grandes.html
@@ -149,10 +149,10 @@
         const csvContent = `
         , Sofá para sala, -
         , Armário para cozinha, -
-        , Mesa de jantar, -
+        Ok, Mesa de jantar, -
         , Painel para sala, -
         , Cama de casal, -
-        , Guarda-roupas, -`;
+        Ok, Guarda-roupas, -`;
 
         // Processa o conteúdo do CSV
         processCSV(csvContent);
