--- a/eletrodomesticos.html
+++ b/eletrodomesticos.html
@@ -151,7 +151,7 @@
         , Pia para cozinha, -
         Ok, Coifa , -
         Ok, TV, -
-        , Aspirador de pó, -
+        Ok, Aspirador de pó, -
         Ok, Forno elétrico, -
         , Climatizador de ar, -
         , Filtro de água, -
@@ -161,8 +161,9 @@
         , Lavadora de louças, -
         , Freezer, -
         , Grill elétrico, -
-        , Panela elétrica (arroz), -
+        Ok, Panela elétrica (arroz), -
         , Panela elétrica (feijão), -
+        Ok, Panela elétrica de pressão, -
         Ok, Sanduicheira elétrica, -
         Ok, Air fryer, -
         Ok, Liquidificador, -
